<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jiayuan.firstapp.jiayuan">
     <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:height="40dp"
          android:text="@string/TextView4"
          android:gravity="center"
          android:id="@+id/TextView4"
          android:textSize="30dp"
          android:layout_marginTop="30dp"
         />
    　<TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:height="30dp"
        android:id="@+id/TextView5"
        android:layout_below="@id/TextView4"
        android:text="@string/TextView5"
        android:gravity="center"
        android:textSize="30dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:text="@string/TextView6"
        android:id="@+id/TextView6"
        android:layout_below="@id/TextView5"
        android:textSize="25dp"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextView6"
        android:id="@+id/EditText1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:text="@string/TextView7"
        android:id="@+id/TextView7"
        android:textSize="25dp"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:text="@string/TextView8"
        android:id="@+id/TextView8"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_below="@+id/TextView7"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp" />
    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:onClick="changeClick"
       android:text="@string/Button3"
       android:layout_marginTop="40dp"
       android:id="@+id/button3"
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="30dp"
        android:text="@string/TextView10"
        android:id="@+id/TextView10"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_below="@+id/TextView8"
        android:layout_alignParentStart="true"
        />
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:height="30dp"
    android:text="@string/TextView11"
    android:id="@+id/TextView11"
    android:textSize="25dp"
    android:gravity="center"
    android:layout_below="@+id/TextView10"
    android:layout_alignParentStart="true"
    />




        >
　　　
</RelativeLayout>
