<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/a3"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:height="60dp"
      android:width="120dp"
      android:textSize="40dp"
      android:text="@string/TextView1"
      android:id="@+id/TextView1"
      android:textColor="#FFFFFF"
      android:layout_centerHorizontal="true"/>
    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:height="30dp"
       android:width="60dp"
       android:text="@string/TextView2"
       android:textSize="25dp"
       android:textColor="#FFFFFF"
       android:id="@+id/TextView2"
       android:layout_below="@+id/TextView1"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="40dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:text="@string/TextView3"
        android:textSize="40dp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:id="@+id/TextView3"
        android:layout_below="@+id/TextView2"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button1"
        android:onClick="StartClick"
        android:textSize="20dp"
        android:id="@+id/Button1"
        android:background="@android:color/transparent"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button2"
        android:onClick="Click"
        android:textSize="20dp"
        android:id="@+id/Button2"
        android:layout_below="@id/Button1"
        android:background="@android:color/transparent"
        />
        <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Button4"
         android:textSize="20dp"
         android:id="@+id/Button4"
         android:layout_below="@+id/Button2"
         android:background="@android:color/transparent"
         android:onClick="TimeClick"
            />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/Button5"
        android:layout_below="@id/Button2"
        android:layout_toRightOf="@id/Button4"
        android:text="@string/Button5"
        android:background="@android:color/transparent"
        android:onClick="StopClick"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Button6"
        android:id="@+id/Button6"
        android:layout_below="@id/Button2"
        android:background="@android:color/transparent"
        android:onClick="ResetClick"
        android:layout_toRightOf="@id/Button5"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView9"
        android:text="0分0秒"
        android:layout_below="@id/Button4"
        android:height="50dp"
        android:textSize="30dp"
        />

</RelativeLayout>
